<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">寻人定位</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_phone">请输入对方的手机号码</string>
    <string name="input_wechat">请输入对方的名字</string>
    <string name="input_wenhou">请输入短信内容,让对方点击链接</string>
    <string name="input_wechat_msg">请输入微信对话内容,让对方点击网址链接</string>
    <string name="start_location_phone">发送定位短信</string>
    <string name="start_location_wexin">发送定位信息</string>
    <string name="location_result">查询定位列表</string>
    <string name="input_correct_phone">请输入正确的手机号码</string>
    <string name="location_wait">正在定位,请稍候</string>
    <string name="location_suscess">定位成功,点击查看</string>
    <string name="location_repeat">该号码已添加定位，请勿重复添加</string>
    <string name="phone">手机定位</string>
    <string name="wechat">微信定位</string>
    <string name="phone_friend">手机号码：</string>
    <string name="wechat_friend">微信好友：</string>
    <string name="wechat1">微信</string>
    <string name="please_wait">定位还没有成功，请稍候</string>
    <string name="net_fail">网络连接失败</string>
    <string name="notice">温馨提示</string>
    <string name="send_sms_text">您即将发送一条短信给对方，让对方打开短信中的网址</string>
    <string name="comfirm_del">确定清空所有定位记录?</string>
	<string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_list">清除列表</string>
    <string name="list_empty">当前没有定位记录</string>
    <string name="select_text">选择输入文字</string>
    <string name="select_text_1">点击打开网页并共享位置，我就知道你在哪里</string>
    <string name="select_text_2">点击打开网页并共享位置，帮我测试一下网页</string>
    <string name="select_text_3">点击打开网页并共享位置，你将会有惊喜</string>
    <string name="select_text_4">清空</string>
    <string name="sw_active">软件免费激活</string>
    <string name="sw_active_tip">您还没有激活，激活需要100积分，您当前的积分为</string>
    <string name="sw_active_tip1">您还没有激活，激活需要100积分，您当前的积分还没达到100</string>
    <string name="download_app">获取积分</string>
    <string name="quit">退出</string>
    <string name="quit_comfirm_tip">退出可能清空定位记录，确定退出？</string>
    <string name="active_susccess">激活成功</string>
    <string name="your_points">您当前的积分为</string>
    <string name="app_wall">热门应用推荐</string>
</resources>






