<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.gime.locationsb.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#f7f7f7"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/btnPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="selectPhoneType"
            android:text="@string/phone" />

        <Button
            android:id="@+id/btnWechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="selectWechatType"
            android:text="@string/wechat" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:id="@+id/llPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_phone"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et1"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:inputType="number"
                    android:maxEms="20"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ivSou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selectContact"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/icon_suo" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/input_wenhou"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et2"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:maxEms="40"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ivSou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:onClick="toSelectMsgText"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/select_menu" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llWechat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_wechat"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/et11"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edittext"
                android:maxEms="50"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvInputWxMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/input_wenhou"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/et21"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edittext"
                android:maxEms="40"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:onClick="addLocationOperation"
            android:text="@string/start_location_phone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/tvlocationStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/location_result"
                android:textColor="#000000" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#00000000"
                android:onClick="clearLocationList"
                android:text="@string/clear_list"
                android:textColor="#5bb64c" />
        </RelativeLayout>

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#f7f7f7" />
    </LinearLayout>

</LinearLayout>